German voiceover with local Coqui TTS xtts_v2

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ELEVENLABS_API_KEY=API_KEY_HERE
 MYSQL_HOST=localhost
-MYSQL_PORT=3306
+MYSQL_PORT=1234
 MYSQL_USER=root
-MYSQL_PASSWORD=wow
-MYSQL_DATABASE=mangos
+MYSQL_PASSWORD=mysql
+MYSQL_DATABASE=wow
