--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ TTS==0.22.0
 pydub==0.25.1
 transformers==4.33.0
 torch==2.5.1
-torchvision=0.20.1
-torchaudio=2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1
